apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector: { app: hello }
  ports:
    - name: http
      port: 80
      targetPort: http
